add path changes

--- a/index.htm
+++ b/index.htm
@@ -398,7 +398,12 @@
               Оставь заявку<br />
               и получи бесплатную оценку:
             </p> -->
-            <form class="order__form" action="" method="post" data-validate="">
+            <form
+              class="order__form"
+              action="send1.php"
+              method="post"
+              data-validate=""
+            >
               <div>
                 <input
                   class="lng-input__name"
