--- a/index.htm
+++ b/index.htm
@@ -1997,11 +1997,11 @@
       rel="stylesheet"
       href="ajax/libs/izimodal/1.5.1/css/iziModal.min.css"
     />
-    <link href="./gh/michalsnik/aos%402.1.1/dist/aos.css" rel="stylesheet" />
+    <link href="./gh/aos.css" rel="stylesheet" />
     <script src="./ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
     <script src="./ajax/libs/izimodal/1.5.1/js/iziModal.min.js"></script>
-    <script src="./gh/michalsnik/aos@2.1.1/dist/aos.js"></script>
+    <script src="./gh/aos.js"></script>
     <script src="./js/scripts.min.js"></script>
     <script src="./js/changeLanguage.js"></script>
   </body>
