--- a/index.htm
+++ b/index.htm
@@ -400,7 +400,7 @@
             </p> -->
             <form
               class="order__form"
-              action="send1.php"
+              action="https://script.google.com/macros/s/AKfycby6-3SomG2S-mB-PZpki19RtMh0WE62cWeZCzR0unliWW5VBbDHhx5Y6xGQHqXsiqF3/exec"
               method="post"
               data-validate=""
             >
