[feat] Add send data to google excel and telegram from form

--- a/index.htm
+++ b/index.htm
@@ -398,12 +398,7 @@
               Оставь заявку<br />
               и получи бесплатную оценку:
             </p> -->
-            <form
-              class="order__form"
-              action="https://script.google.com/macros/s/AKfycby6-3SomG2S-mB-PZpki19RtMh0WE62cWeZCzR0unliWW5VBbDHhx5Y6xGQHqXsiqF3/exec"
-              method="post"
-              data-validate=""
-            >
+            <form class="order__form" action="" method="post" data-validate="">
               <div>
                 <input
                   class="lng-input__name"
