--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
     <link rel="stylesheet" href="css/main1.min.css" />
   </head>
 
-  <body style="opacity: 0; background-image: none">
+  <body ontouchstart="" style="opacity: 0; background-image: none">
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
