[feat] Add new work foto to example section

--- a/index.htm
+++ b/index.htm
@@ -1039,7 +1039,7 @@
             <div class="swiper-wrapper examples__box">
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/01.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/01.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title lng-examples-apartments">
@@ -1053,7 +1053,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/02.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/02.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт в новострое</h3>
@@ -1065,7 +1065,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/03.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/03.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт сан-узла</h3>
@@ -1077,7 +1077,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/04.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/04.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт кухни</h3>
@@ -1089,7 +1089,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/05.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/05.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Капитальный ремонт спальни</h3>
@@ -1101,7 +1101,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/06.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/06.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Косметический ремонт спальни</h3>
@@ -1113,7 +1113,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/07.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/07.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Дизайн и обстановка</h3>
@@ -1125,7 +1125,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/08.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/08.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт офисных помещений</h3>
@@ -1138,7 +1138,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/09.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/09.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт детской комнаты</h3>
@@ -1150,7 +1150,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/010.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/010.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Ремонт прихожей</h3>
@@ -1162,7 +1162,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/011.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/011.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Капитальный ремонт лоджии</h3>
@@ -1174,7 +1174,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/012.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/012.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">
@@ -1188,7 +1188,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/013.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/013.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title examples__title-big">
@@ -1203,7 +1203,7 @@
               </div>
               <div class="swiper-slide examples__item">
                 <div class="examples__img">
-                  <img src="img/examples/014.jpg" alt="Квартира 1" />
+                  <img src="img/examples/Yurii/014.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
                   <h3 class="examples__title">Дизайн-проект</h3>
