[refactor] Change url to logo

--- a/index.htm
+++ b/index.htm
@@ -66,11 +66,14 @@
       content="Строительство домов, качественный ремонт офисов, квартир, коттеджей и торговых площадей"
     />
     <!-- TODO: заменить адрес сайта ниже -->
-    <meta property="og:url" content="https://kiev-remont.in.ua/" />
-    <!-- TODO: заменить адрес сайта и картинку ниже -->
+    <meta
+      property="og:url"
+      content="https://olga-salt.github.io/building_company/"
+    />
+
     <meta
       property="og:image"
-      content="https://kiev-remont.in.ua/img/favicon/og-image.jpg"
+      content="https://olga-salt.github.io/building_company/img/favicon/logoJpeg.jpg"
     />
     <link rel="stylesheet" href="css/main1.min.css" />
   </head>
@@ -1056,7 +1059,9 @@
                   <img src="img/examples/Yurii/02.jpg" alt="Квартира 1" />
                 </div>
                 <div class="examples__text">
-                  <h3 class="examples__title">Ремонт в новострое</h3>
+                  <h3 class="examples__title">
+                    Cтиль минимализм с элементами Wabi Sabi
+                  </h3>
                   <p class="examples__desc">
                     Контражурный потолок, паркет, отличное освещение,
                     декоративная штукатурка.
