[fix] Add styles for better adaptive design

--- a/index.htm
+++ b/index.htm
@@ -370,12 +370,12 @@
               >Домашний мастер</a
             >
           </li>
-          <li class="form-break">\</li>
+          <!-- <li class="form-break">\</li>
           <li>
             <a class="lng-services-rent" href="#services-down"
               >Аренда и прокат инструментов</a
             >
-          </li>
+          </li> -->
         </ul>
       </div>
     </header>
