[fix] Fix styles, add new text to lng-cover__form__title and translation

--- a/index.htm
+++ b/index.htm
@@ -395,7 +395,7 @@
           </h2>
           <div class="cover__form" data-aos="fade-up" data-aos-delay="500">
             <p class="cover__form__title lng-cover__form__title">
-              Задать вопрос:
+              Оставь заявку и получи бесплатную оценку:
             </p>
             <!-- <p class="cover__form__title lng-cover__form__title">
               Оставь заявку<br />
