[fix] Delete price in services__price

--- a/index.htm
+++ b/index.htm
@@ -937,7 +937,7 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="services__price">
+                  <!-- <div class="services__price">
                     <span class="services-wrap">
                       <span class="services__price__old lng-from"> от </span>
                       <span class="from-old">299</span>
@@ -949,13 +949,7 @@
                     <span class="from_new">199</span>
                     <span> $/м</span>
                     <sup>2</sup>
-                    <!-- <div class="services__price__old">
-                      от <span>299</span> $/выезд
-                    </div>
-                    <div class="services__price__new">
-                      от <span>199</span> $/выезд
-                    </div> -->
-                  </div>
+                  </div> -->
                 </div>
                 <!-- <div
                   class="swiper-slide services__item services__item-big"
