[feat] add correct email address

--- a/index.htm
+++ b/index.htm
@@ -2040,7 +2040,10 @@
                 <a href="tel:+380937961912">+38(093) 796 19 12</a>
                 <a href="tel:+4917683039166">+49(176) 830 39 166</a>
 
-                <a href="mailto:dream.house@gmail.com">dream.house@gmail.com</a>
+                <a
+                  href="mailto:your.dream.house@gmail.com?subject=Заявки с сайта"
+                  >your.dream.house@gmail.com</a
+                >
               </div>
               <!-- <a
                 class="footer__copy"
