[fix] Fix email adress

--- a/index.htm
+++ b/index.htm
@@ -2040,8 +2040,7 @@
                 <a href="tel:+380937961912">+38(093) 796 19 12</a>
                 <a href="tel:+4917683039166">+49(176) 830 39 166</a>
 
-                <a
-                  href="mailto:your.dream.house@gmail.com?subject=Заявки с сайта"
+                <a href="mailto:your.dream.house@gmail.com"
                   >your.dream.house@gmail.com</a
                 >
               </div>
